--- a/nglview/theme/oceans16.css
+++ b/nglview/theme/oceans16.css
@@ -26,6 +26,17 @@ div#ipython_notebook {display: none;}
     border:none;
 }
 
+.ui-dialog-titlebar-close {
+    background:none;
+    border:none;
+}
+
+.ui-dialog .ui-resizable-se {
+    right:0 !important;
+    bottom:0 !important;
+    background-position: -64px -224px !important;
+}
+
 .running_notebook_icon:before {
     color: #02ac65 !important;
 }
