--- a/nglview/theme/oceans16.css
+++ b/nglview/theme/oceans16.css
@@ -1,3 +1,8 @@
+/*
+    Name:       Oceans16 Dark
+    Author:     Kyle Dunovan (http://github.com/dunovank)
+*/
+
 body {
  font-family: "Droid Sans", sans-serif;
  font-size: 12.7pt;
