--- a/js/src/css/main.css
+++ b/js/src/css/main.css
@@ -53,21 +53,22 @@ select {
     margin-left: 1px;
 }
 
-textarea {
-	white-space: pre;
-	word-wrap: normal;
-}
-
-	textarea.success {
-		border-color: #8b8 !important;
-	}
-
-	textarea.fail {
-		border-color: #f00 !important;
-		background-color: rgba(255,0,0,0.05);
-	}
-
-textarea, input { outline: none; } /* osx */
+// NOTE (FIXME): turning this on will affect notebook
+// textarea {
+// 	white-space: pre;
+// 	word-wrap: normal;
+// }
+// 
+// 	textarea.success {
+// 		border-color: #8b8 !important;
+// 	}
+// 
+// 	textarea.fail {
+// 		border-color: #f00 !important;
+// 		background-color: rgba(255,0,0,0.05);
+// 	}
+// 
+// textarea, input { outline: none; } /* osx */
 
 input.Number {
     font-size: 12px;                            /** TODO: Use of !imporant is not ideal **/
