--- a/nglview/theme/dark.css
+++ b/nglview/theme/dark.css
@@ -1,9 +1,8 @@
-﻿
+
 /* text color */
 
-/** Turn this off to avoid affecting Jupyter notebook
 * {
-    color: #555555;
+    color: #B8B8B8;
 }
 
 input,
@@ -15,15 +14,15 @@ option {
 }
 
 input[type=range]:focus:after {
-    color: #555555;
+    color: #B8B8B8;
 }
 
 a{
-    color: #1956d8;
+    color: #719eff;
 }
 
 input.Number, input.File {
-    color: #79952e;
+    color: #A1B56C;
 }
 
 
@@ -35,7 +34,7 @@ input.Number, input.File {
 #sidebar_ngl,
 #toolbar_ngl
 {
-    background-color: #e1e4eb;
+    background-color: #1C1F26;
 }
 
 
@@ -45,7 +44,7 @@ input.Number, input.File {
 #menubar_ngl .menu .options hr,
 #sidebar_ngl > .Panel,
 #sidebar_ngl > .Content > .Panel {
-    border-color: #cccccc;
+    border-color: #444444;
 }
 
 
@@ -54,17 +53,17 @@ input.Number, input.File {
 #menubar_ngl .menu .options .option:hover,
 .option:hover > .Icon,
 .option:hover > .Text {
-    color: #D8D8D8;
-    background-color: #345a69;
+    color: #181818;
+    background-color: #7CAFC2;
 }
 
 .highlight,
 .highlight > .Icon,
 .highlight > .Text {
-    color: #D8D8D8;
-    background-color: #345a69;
+    color: #181818;
+    background-color: #7CAFC2;
 }
 
 .EllipsisMultilineText:after {
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), #e1e4eb 50%, #e1e4eb);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0), #1C1F26 50%, #1C1F26);
 }
